# sopel-genius-answer

./: MANIFEST.in  NOTE.md  README.md  TODO  pyproject.toml  requirements.txt  setup.py
sopel_modules/genius-answer/: __init__.py
