[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "sopel_modules.genius-answer"
description = "A sopel plugin (irc-bot) to answer with a quote from rapgenius.com "
readme = "README.md"
authors = [{name = "eoli3n", email = "eoli3n@runbox.com"}]
license = {text = "WTFPL"}
requires-python = ">=3.8"
dependencies = [
    "sopel>=7.1,<8",
    "lyricsgenius>=3.0.1,<4"
]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/eoli3n/sopel-genius-answer"

[tool.setuptools.packages.find]
include = ["sopel_modules"]

[tool.setuptools_scm]
